Adds method findAllVertexPaths.